final commit fix-text overlapping

--- a/css/about.css
+++ b/css/about.css
@@ -892,7 +892,7 @@ img {
     color: white;
     opacity: 0.7;
     line-height: 1.8;
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
 }
 
